@@ -634,7 +634,7 @@ public class WiktionaryGui extends JPanel implements InitializingBean, ActionLis
 					//
 					return httpURLConnection != null && httpURLConnection.getResponseCode() == HttpStatus.SC_OK;
 					//
-				}, urlConnection, Util::getInputStream, null), x -> IOUtils.toString(x, encoding), null);
+				}, urlConnection, Util::getInputStream, null), x -> new String(x.readAllBytes(), encoding), null);
 				//
 			} catch (final IOException e) {
 				//
